clusters/home/apps/navidrome/navidrome/configs/navidrome-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome-ingressroute
  namespace: navidrome
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://navidrome.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Navidrome
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: mdi-music
    gethomepage.dev/app: navidrome # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Navidrome
    #gethomepage.dev/widget.type: "navidrome"
    #gethomepage.dev/widget.url: "https://navidrome.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`navidrome.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: navidrome
      port: 4533
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: navidrome-certificate-secret
